# Hybrid_Automata

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md  SystemCreator.py  WT_check.xml  WT_config.xml  WT_prova.json  exceptionSolver.cpp  firstexample.json  output.json  secondexample.json  settings.json  sim_time_res  test.txt  thirdexample.json  watertanks.json  wt_extended.json
automata/: automaton10.json  automaton25.json
include/: Objects.h  UtilsJson.h  arrowitem.h  circleitem.h  csvfile.h  global_variables.h  graph.h  json.hpp  mainwindow.h  style.h  switch.h  tools.h
scripts/: SystemCreator.py
src/: Automata.cpp  Graph.cpp  Node.cpp  ScrapingJson.cpp  System.cpp  Transition.cpp  arrowitem.cpp  main.cpp  mainwindow.cpp  mainwindow.ui  switch.cpp  tinyexpr.c  tools.cpp
